--- a/style.css
+++ b/style.css
@@ -4,3 +4,42 @@
 body {
     font-family: 'Hind Madurai', sans-serif;
 }
+
+.left{
+    flex: 0 0 70%;
+    padding-right: 15px;
+}
+
+.right{
+    flex: 0 0 30%;
+    padding-left: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+    .header-section {
+        flex-direction: column;
+        text-align: center;
+    }
+    .header-count-section{
+        padding-top: 15px;
+    }
+}
+
+@media (max-width: 768px) {
+    .contact-container {
+        flex-direction: column;
+        
+    }
+}
